--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,7 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+$body-font-family: 'VT323', monospace;
+$font-size-root: 14px;
+
+@import '~vuetify/src/styles/styles.sass';
